<resources>
    <string name="app_name">GrocerGo Admin</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="fullname">Fullname</string>
    <string name="signUpText">Already have an account?</string>
    <string name="loginText">Don\'t have an account?</string>
</resources>